# PyDkGenerated

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  test.yml
examples/: py_dk_generated_facade_example.py
pydk_wrapper/: py_dk_generated_facade.py
tests/: main_test.py
