[metadata]
name = py-dk-generated
version = 0.1.0
author = Bartolomej Elias
description = Python SDK for Applifting Exercise API with Facade
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/suvreal/PyDkGenerated
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    cachetools>=5.0

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    ruff
    mypy

[tool:ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "B", "I", "C4"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = true